# lillaspel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  clean.bat  full.bat  log.bat  log.txt  run.bat
assets/Box/: indicatorSphereWithMaterial.glb
assets/SpaceShip/: room.glb
assets/TexBox/: TextureCube.glb
assets/indicators/: indicatorSphere.glb
assets/meshes/: indicatorSphere05.glb  indicatorSphereMassive.glb
assets/scenes/: SpaceShipScene.json  coolt.scene  gabbeScene.json  gabbeScene.scene  imgui.ini  log.txt  playerScene.json  rayCastTestScene.json  test.json  test2.scene  test3.scene  testPlayerScene.json  testresult.json  testresult.scene  testscene.json
assets/skybox/: cubeMap.dds
headers/: test.h
headers/UI/: button.h  canvas.cpp  canvas.h  uiManager.h  widget.h
headers/core/: assetManager.h  filepathHolder.h  game.h  imguiManager.h  inputManager.h  time.h  tools.h  window.h
headers/core/audio/: audioInstruction.h  audioManager.h  musicTrack.h  musicTrackManager.h  soundBank.h  soundClip.h  soundEngine.h  soundSource.h  soundSourceManager.h  soundSourceObject.h
headers/core/input/: abstractInput.h  controller.h  controllerInput.h  controlsHandler.h  inputManager.h  keyboardInput.h
headers/core/physics/: boxCollider.h  collider.h  collision.h  physics.h  physics.hpp  physicsQueue.h  ray.h  rayCaster.h  rigidBody.h  sphereCollider.h  testPlayer.h  vector3D.h
headers/engine/: game.h  window.h
headers/game/: player.h
headers/gameObjects/: SpaceShipObj.h  cameraObject.h  debugCamera.h  gameObject.h  gameObject3D.h  gameObjectFactory.h  gameObjectSerialization.h  mesh.h  meshObjData.h  meshObject.h  objectLoader.h  pointLightObject.h  room.h  spotlightObject.h  transform.h
headers/managers/Audio/: audioInstruction.h  audioManager.h  soundClip.h
headers/objects/: gameObject.h  gameObject3D.h  mesh.h  objectLoader.h
headers/rendering/: baseMaterial.h  constantBuffer.h  depthBuffer.h  genericMaterial.h  indexBuffer.h  inputLayout.h  material.h  rasterizerState.h  renderQueue.h  renderTarget.h  renderer.h  sampler.h  shader.h  skybox.h  structuredBuffer.h  tempRenderDefs.h  temp_render_defs.h  texture.h  textureCube.h  unlitMaterial.h  vertex.h  vertexBuffer.h
headers/scene/: objectFromStringFactory.h  scene.h  sceneManager.h
headers/utilities/: aStar.h  logger.h  masterVolume.h  minPriorityQueue.h  time.h
src/: main.cpp
src/Audio/: musicTrack.cpp  soundSource.cpp
src/UI/: button.cpp  canvas.cpp  uiManager.cpp  widget.cpp
src/core/: assetManager.cpp  game.cpp  imguiManager.cpp  inputManager.cpp  tools.cpp  window.cpp
src/core/audio/: audioManager.cpp  audioNotes.txt  musicTrack.cpp  musicTrackManager.cpp  soundBank.cpp  soundClip.cpp  soundEngine.cpp  soundSource.cpp  soundSourceManager.cpp  soundSourceObject.cpp
src/core/input/: controller.cpp  controllerInput.cpp  controlsHandler.cpp  inputManager.cpp  keyboardInput.cpp
src/core/physics/: boxCollider.cpp  collider.cpp  physics.cpp  physicsNotes.txt  physicsQueue.cpp  ray.cpp  rayCaster.cpp  rigidBody.cpp  sphereCollider.cpp  testPlayer.cpp  vector3D.cpp
src/engine/: game.cpp  window.cpp
src/game/: player.cpp
src/gameObjects/: SpaceShipObj.cpp  cameraObject.cpp  debugCamera.cpp  gameObject.cpp  gameObject3D.cpp  gameObjectFactory.cpp  gameObjectSerialization.cpp  mesh.cpp  meshObjData.cpp  meshObject.cpp  objectLoader.cpp  pointLightObject.cpp  room.cpp  spotlightObject.cpp  transform.cpp
src/objects/: mesh.cpp  objectLoader.cpp  transform.cpp
src/rendering/: constantBuffer.cpp  depthBuffer.cpp  indexBuffer.cpp  inputLayout.cpp  material.cpp  rasterizerState.cpp  renderQueue.cpp  renderTarget.cpp  renderer.cpp  sampler.cpp  shader.cpp  skybox.cpp  structuredBuffer.cpp  textureCube.cpp  vertexBuffer.cpp
src/scene/: objectFromStringFactory.cpp  scene.cpp  sceneManager.cpp
src/shaders/pixelshaders/: PSTest.hlsl  light.hlsl  psLit.hlsl  psSkybox.hlsl  psUnlit.hlsl
src/shaders/vertexshaders/: VSTest.hlsl  vsSkybox.hlsl
